<resources>
    <string name="app_name">WeatherGuide</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="btn_back">Back</string>
    <string name="btn_register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_choose_lang">Choose language</string>
    <string name="weather_inregion">Weather in your region</string>
    <string name="recommendation_today">Your recommendation for today</string>
    <string name="humidity">Humidity</string>
    <string name="temperature">Temperature</string>
    <string name="windspeed">Wind speed</string>
    <string name="login">Log in</string>
    <string name="text_home">WeatherGuide is a clothing recommendation application that will always find and offer you a suitable garment based on the current weather in your region. In order to start getting recommendations there are a few simple steps you have to follow: register, setup your profile, choose your country and region and now you are eligible to get your clothing tips right away!</string>
    <string name="language">Language</string>
    <string name="signout">Sign out</string>
    <string name="password">Password</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="recommendations">Recommendations</string>
    <string name="profile_header">Profile page</string>
    <string name="change_location_text">Change location</string>
    <string name="save">Save</string>
    <string name="old_password_hint">Old password</string>
    <string name="new_password_hint">New password</string>
    <string name="new_password_repeat_hint">Repeat password</string>
    <string name="new_password_equal_to_old">New password can\'t be equal to old password</string>
    <string name="passwords_not_equal">Repeat password isn\'t equal to New password</string>
    <string name="empty_fields">Empty fields detected</string>
    <string name="old_password_wrong">Wrong old password</string>
    <string name="new_password_weak">Weak password</string>
    <string name="name_wrong">Wrong name</string>
    <string name="surname_wrong">Wrong surname</string>
    <string name="location_changed">Location was changed</string>
    <string name="no_changes">No changes detected</string>
    <string name="password_changed">Password changed</string>
    <string name="change_password">Change password</string>
    <string name="info_changed">Info was changed</string>
    <string name="login_wrong">Wrong Email or password</string>
    <string name="email_wrong">Email is invalid</string>
    <string name="or_text">or</string>
    <string name="user_already_exists">User already exists</string>
    <string name="jwt_expired">Session expired, log in again.</string>
    <string name="reg_title">Registration</string>
    <string name="too_many_requests">You are making too many requests</string>
    <string name="recommendation_cooldown">You can\'t change region for 15 minutes after receiving a recommendation. Try again later.</string>
    <string name="geolocation_service">Use geolocation service</string>
    <string name="geolocation_service_success">Geolocation service identified and set your location.</string>
    <string name="geolocation_service_fail">Geolocation service could not track your location.</string>
</resources>